# autoware.universe

.github/workflows/: build-and-test-differential.yaml  check-build-depends.yaml
common/autoware_universe_utils/: CMakeLists.txt
perception/autoware_image_projection_based_fusion/src/pointpainting_fusion/: pointpainting_trt.cpp
perception/autoware_lidar_centerpoint/include/autoware/lidar_centerpoint/: centerpoint_trt.hpp
perception/autoware_lidar_centerpoint/src/: node.cpp
perception/image_projection_based_fusion/include/image_projection_based_fusion/pointpainting_fusion/: pointpainting_trt.hpp
perception/image_projection_based_fusion/src/pointpainting_fusion/: pointpainting_trt.cpp
perception/lidar_centerpoint/: package.xml
perception/lidar_centerpoint/include/lidar_centerpoint/: centerpoint_trt.hpp  node.hpp
perception/lidar_centerpoint/include/lidar_centerpoint/postprocess/: postprocess_kernel.hpp
perception/lidar_centerpoint/include/lidar_centerpoint/preprocess/: pointcloud_densification.hpp  voxel_generator.hpp
perception/lidar_centerpoint/launch/: lidar_centerpoint.launch.xml
perception/lidar_centerpoint/lib/: centerpoint_trt.cpp
perception/lidar_centerpoint/lib/postprocess/: postprocess_kernel.cu
perception/lidar_centerpoint/lib/preprocess/: pointcloud_densification.cpp  voxel_generator.cpp
perception/lidar_centerpoint/src/: node.cpp
perception/lidar_centerpoint/test/: test_voxel_generator.cpp  test_voxel_generator.hpp
perception/traffic_light_arbiter/: README.md
perception/traffic_light_arbiter/launch/: traffic_light_selector.launch.xml
perception/traffic_light_arbiter/src/: traffic_light_arbiter.cpp  traffic_light_arbiter.hpp
sensing/autoware_cuda_pointcloud_preprocessor/: CMakeLists.txt
sensing/autoware_pointcloud_preprocessor/: CMakeLists.txt
sensing/autoware_pointcloud_preprocessor/src/downsample_filter/: approximate_downsample_filter_nodelet.cpp  voxel_grid_downsample_filter_nodelet.cpp
sensing/autoware_pointcloud_preprocessor/src/outlier_filter/: dual_return_outlier_filter_nodelet.cpp  radius_search_2d_outlier_filter_nodelet.cpp  voxel_grid_outlier_filter_nodelet.cpp
sensing/autoware_pointcloud_preprocessor/src/passthrough_filter/: passthrough_filter_nodelet.cpp  passthrough_filter_uint16_nodelet.cpp
